--- a/app/src/main/res/layout/fragment_add_heart_item.xml
+++ b/app/src/main/res/layout/fragment_add_heart_item.xml
@@ -75,7 +75,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/upPressureBoxLayout"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@id/margin_main"
                 app:layout_constraintEnd_toStartOf="@id/downPressureBoxLayout"
                 app:layout_constraintTop_toBottomOf="@id/pressureTitle"
@@ -83,29 +83,40 @@
                 android:layout_marginTop="10dp"
                 >
 
-            <EditText
-                style="@style/hint1"
-                android:id="@+id/upPressureBox"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@drawable/box"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:hint="@string/up_pressure"
-                android:gravity="center_vertical"
-                android:padding="15dp"
-                android:inputType="number"
-                android:imeOptions="actionNext"
-                />
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/materialEditText"
+                    android:id="@+id/textInputLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="66dp"
+                    app:layout_constraintStart_toStartOf="@id/upPressureBoxLayout"
+                    app:layout_constraintTop_toTopOf="@id/upPressureBoxLayout"
+                    app:layout_constraintEnd_toEndOf="@id/upPressureBoxLayout"
+                    app:errorEnabled="true"
+                    android:hint="@string/up_pressure"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/upPressureBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toStartOf="@id/textInputLayout"
+                        app:layout_constraintTop_toTopOf="@id/textInputLayout"
+                        app:layout_constraintBottom_toBottomOf="@id/textInputLayout"
+                        app:layout_constraintEnd_toEndOf="@id/textInputLayout"
+                        android:inputType="number"
+                        android:imeOptions="actionNext"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/downPressureBoxLayout"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/upPressureBoxLayout"
                 app:layout_constraintEnd_toStartOf="@id/pulseBoxLayout"
                 app:layout_constraintTop_toTopOf="@id/upPressureBoxLayout"
@@ -113,50 +124,71 @@
                 android:layout_marginStart="5dp"
                 >
 
-                <EditText
-                    style="@style/hint1"
-                    android:id="@+id/downPressureBox"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/materialEditText"
+                    android:id="@+id/textInputLayout2"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:background="@drawable/box"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_height="66dp"
+                    app:layout_constraintStart_toStartOf="@id/downPressureBoxLayout"
+                    app:layout_constraintTop_toTopOf="@id/downPressureBoxLayout"
+                    app:layout_constraintEnd_toEndOf="@id/downPressureBoxLayout"
+                    app:errorEnabled="true"
                     android:hint="@string/down_pressure"
-                    android:gravity="center_vertical"
-                    android:padding="15dp"
-                    android:inputType="number"
-                    android:imeOptions="actionNext"
-                    />
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/downPressureBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toStartOf="@id/textInputLayout2"
+                        app:layout_constraintTop_toTopOf="@id/textInputLayout2"
+                        app:layout_constraintBottom_toBottomOf="@id/textInputLayout2"
+                        app:layout_constraintEnd_toEndOf="@id/textInputLayout2"
+                        android:inputType="number"
+                        android:imeOptions="actionNext"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pulseBoxLayout"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/downPressureBoxLayout"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 app:layout_constraintTop_toTopOf="@id/downPressureBoxLayout"
                 android:layout_marginStart="5dp"
                 >
 
-                <EditText
-                    style="@style/hint1"
-                    android:id="@+id/pulseBox"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/materialEditText"
+                    android:id="@+id/textInputLayout3"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:background="@drawable/box"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_height="66dp"
+                    app:layout_constraintStart_toStartOf="@id/pulseBoxLayout"
+                    app:layout_constraintTop_toTopOf="@id/pulseBoxLayout"
+                    app:layout_constraintEnd_toEndOf="@id/pulseBoxLayout"
+                    app:errorEnabled="true"
                     android:hint="@string/pulse"
-                    android:gravity="center_vertical"
-                    android:padding="15dp"
-                    android:inputType="number"
-                    />
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/pulseBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toStartOf="@id/textInputLayout3"
+                        app:layout_constraintTop_toTopOf="@id/textInputLayout3"
+                        app:layout_constraintBottom_toBottomOf="@id/textInputLayout3"
+                        app:layout_constraintEnd_toEndOf="@id/textInputLayout3"
+                        android:inputType="number"
+                        android:imeOptions="actionNext"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -174,7 +206,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/dateAndTimeBoxLayout"
                 android:layout_width="0dp"
-                android:layout_height="65dp"
+                android:layout_height="66dp"
                 app:layout_constraintStart_toStartOf="@id/margin_main"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 app:layout_constraintTop_toBottomOf="@id/dateAndTimeTitle"
@@ -182,20 +214,33 @@
                 android:layout_marginTop="10dp"
                 >
 
-                <TextView
-                    style="@style/hint1"
-                    android:id="@+id/dateAndTimeText"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/materialEditText"
+                    android:id="@+id/textInputLayout4"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:background="@drawable/box"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/dateAndTimeBoxLayout"
+                    app:layout_constraintTop_toTopOf="@id/dateAndTimeBoxLayout"
+                    app:layout_constraintEnd_toEndOf="@id/dateAndTimeBoxLayout"
+                    app:errorEnabled="true"
                     android:hint="@string/ChooseTimeAndDate"
-                    android:gravity="center_vertical"
-                    android:padding="15dp"
-                    />
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dateAndTimeBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toStartOf="@id/textInputLayout4"
+                        app:layout_constraintTop_toTopOf="@id/textInputLayout4"
+                        app:layout_constraintBottom_toBottomOf="@id/textInputLayout4"
+                        app:layout_constraintEnd_toEndOf="@id/textInputLayout4"
+                        android:inputType="number"
+                        android:imeOptions="actionNext"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
