--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,6 +8,8 @@
 
     </style>
 
+    <color name="MaterialEditTextHintColor">@color/tint_color</color>
+
     <style name="zagalovok1">
         <item name="fontFamily">@font/inter_semibold</item>
         <item name="android:textSize">24sp</item>
@@ -60,6 +62,19 @@
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColorHint">@color/tint_color</item>
+    </style>
+
+    <style name="materialEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxCornerRadiusBottomEnd">15dp</item>
+        <item name="boxCornerRadiusBottomStart">15dp</item>
+        <item name="boxCornerRadiusTopEnd">15dp</item>
+        <item name="boxCornerRadiusTopStart">15dp</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxBackgroundColor">#313131</item>
+        <item name="android:textColorHint">@color/tint_color</item>
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="paddingStart">15dp</item>
+        <item name="paddingEnd">15dp</item>
     </style>
 
 </resources>
