--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,8 @@
 
     <style name="Theme.HealthCheck" parent="whiteHealthCheck" />
 
+    <color name="MaterialEditTextHintColor">@color/black</color>
+
 <!-- custom styles  !-->
 
     <style name="zagalovok1">
@@ -64,6 +66,18 @@
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColorHint">@color/tint_color</item>
+    </style>
+
+    <style name="materialEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxCornerRadiusBottomEnd">15dp</item>
+        <item name="boxCornerRadiusBottomStart">15dp</item>
+        <item name="boxCornerRadiusTopEnd">15dp</item>
+        <item name="boxCornerRadiusTopStart">15dp</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="paddingStart">15dp</item>
+        <item name="paddingEnd">15dp</item>
     </style>
 
 </resources>
