--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -169,7 +169,7 @@
                         app:layout_constraintTop_toTopOf="@id/textInputLayout3"
                         app:layout_constraintBottom_toBottomOf="@id/textInputLayout3"
                         app:layout_constraintEnd_toEndOf="@id/textInputLayout3"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:imeOptions="actionDone"
                         />
 
