--- a/app/src/main/res/layout/fragment_start_5.xml
+++ b/app/src/main/res/layout/fragment_start_5.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/margin_main1"
                 app:layout_constraintEnd_toStartOf="@id/margin_main2"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="30dp"
                 android:text="Выберите ваш возраст"
                 />
 
@@ -53,7 +53,7 @@
                 app:layout_constraintStart_toStartOf="@id/margin_main1"
                 app:layout_constraintTop_toBottomOf="@id/quetion_years"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="10dp">
 
                 <ImageView
                     android:id="@+id/numPick_box"
@@ -80,51 +80,54 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                style="@style/zagalovok1"
-                android:id="@+id/quetion_weight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/numPick_years"
-                app:layout_constraintStart_toEndOf="@id/margin_main1"
-                app:layout_constraintEnd_toStartOf="@id/margin_main2"
-                android:layout_marginTop="30dp"
-                android:text="Выберите ваш вес"
-                />
-
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/numPick_weight"
+                android:id="@+id/ageEditBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@id/margin_main1"
-                app:layout_constraintTop_toBottomOf="@id/quetion_weight"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                android:layout_marginTop="20dp">
+                app:layout_constraintTop_toBottomOf="@id/numPick_years"
+                android:layout_marginTop="10dp"
+                >
 
-                <ImageView
-                    android:id="@+id/numPick_box_weight"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:src="@drawable/box"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                <TextView
+                    style="@style/zagalovok2"
+                    android:id="@+id/textOr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:text="@string/or"
                     />
 
-                <NumberPicker
-                    android:id="@+id/numberPicker1"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/materialEditText"
+                    android:id="@+id/textInputLayout2"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toStartOf="@id/numPick_box_weight"
-                    app:layout_constraintTop_toTopOf="@id/numPick_box_weight"
-                    app:layout_constraintBottom_toBottomOf="@id/numPick_box_weight"
-                    app:layout_constraintEnd_toEndOf="@id/numPick_box_weight"
-                    />
+                    android:layout_height="77dp"
+                    app:layout_constraintStart_toStartOf="@id/ageEditBox"
+                    app:layout_constraintTop_toBottomOf="@id/textOr"
+                    app:layout_constraintEnd_toEndOf="@id/ageEditBox"
+                    app:errorEnabled="true"
+                    android:hint="@string/input_age"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/ageText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toStartOf="@id/textInputLayout2"
+                        app:layout_constraintTop_toTopOf="@id/textInputLayout2"
+                        app:layout_constraintBottom_toBottomOf="@id/textInputLayout2"
+                        app:layout_constraintEnd_toEndOf="@id/textInputLayout2"
+                        android:inputType="number"
+                        android:imeOptions="actionDone"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
