--- a/app/src/main/res/layout/fragment_start_6.xml
+++ b/app/src/main/res/layout/fragment_start_6.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/margin_main1"
                 app:layout_constraintEnd_toStartOf="@id/margin_main2"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="30dp"
                 android:text="Выберите ваш рост"
                 />
 
@@ -53,7 +53,7 @@
                 app:layout_constraintStart_toStartOf="@id/margin_main1"
                 app:layout_constraintTop_toBottomOf="@id/quetion_height"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="10dp">
 
                 <ImageView
                     android:id="@+id/numPick_box_height"
@@ -77,6 +77,54 @@
                     app:layout_constraintBottom_toBottomOf="@id/numPick_box_height"
                     app:layout_constraintEnd_toEndOf="@id/numPick_box_height"
                     />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/heightEditBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/margin_main1"
+                app:layout_constraintEnd_toEndOf="@id/margin_main2"
+                app:layout_constraintTop_toBottomOf="@id/numPick_height"
+                android:layout_marginTop="10dp"
+                >
+
+                <TextView
+                    style="@style/zagalovok2"
+                    android:id="@+id/textOr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="@string/or"
+                    />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/materialEditText"
+                    android:id="@+id/textInputLayout3"
+                    android:layout_width="0dp"
+                    android:layout_height="77dp"
+                    app:layout_constraintStart_toStartOf="@id/heightEditBox"
+                    app:layout_constraintTop_toBottomOf="@id/textOr"
+                    app:layout_constraintEnd_toEndOf="@id/heightEditBox"
+                    app:errorEnabled="true"
+                    android:hint="@string/input_height"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/heightText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintStart_toStartOf="@id/textInputLayout3"
+                        app:layout_constraintTop_toTopOf="@id/textInputLayout3"
+                        app:layout_constraintBottom_toBottomOf="@id/textInputLayout3"
+                        app:layout_constraintEnd_toEndOf="@id/textInputLayout3"
+                        android:inputType="numberDecimal"
+                        android:imeOptions="actionDone"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
