--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -420,7 +420,7 @@
                 app:layout_constraintStart_toStartOf="@id/margin_main"
                 app:layout_constraintTop_toBottomOf="@id/st5000_box"
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/materialEditText"
@@ -431,7 +431,7 @@
                     app:layout_constraintTop_toTopOf="@id/target_box"
                     app:layout_constraintEnd_toEndOf="@id/target_box"
                     app:errorEnabled="true"
-                    android:hint="@string/input_steps"
+                    android:hint="@string/select_everyday_target"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
